@startuml
skinparam classAttributeIconSize 0

' ===========================
' Abstract Base Class for Login
' ===========================

abstract class User {
    ID: UUID {primary key}
    email: text UNIQUE NOT NULL
    password_hash: text NOT NULL
    Name: text NOT NULL
    phone: int UNIQUE
    status: ENUM {ACTIVE INACTIVE} DEFAULT 'ACTIVE'
}

' ===========================
' Core Entity Classes (One-to-One Extension Pattern)
' ===========================

class Client {
    ID : UUID {primary key, foreign key -> User.ID}
    NIF: int NOT NULL
    address: text
}

class Lawyer {
    ID : UUID {primary key, foreign key -> User.ID}
    NIF: int NOT NULL
    professional_register_number: text UNIQUE NOT NULL
}

class Admin {
    ID : UUID {primary key, foreign key -> User.ID}
    start_date : timestamp NOT NULL
}

class Process {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID} NOT NULL
    lawyer_ID: UUID {foreign key -> Lawyer.ID} NOT NULL
    process_number : text NOT NULL
    title : text NOT NULL
    description: text
    created_at: timestamp DEFAULT CURRENT_TIMESTAMP
    closed_at: timestamp
    current_phase : ENUM {INITIAL_PETITION SUMMONS_AND_DEFENSE JUDICIAL_ORDER PRELIMINARY_HEARING TRIAL_PREPARATION TRIAL VEREDICT APPEAL ENFORCEMENT_OF_JUDGMENT} DEFAULT INITIAL_PETITION
    status: ENUM {OPEN CLOSED PENDING} DEFAULT 'OPEN'
}

class Documents {
    ID: UUID {primary key}
    process_ID: UUID {foreign key -> Process.ID} NOT NULL
    file: BLOB NOT NULL
    file_name : text NOT NULL
    uploaded_at: timestamp DEFAULT CURRENT_TIMESTAMP
    UNIQUE (process_ID, file_name)
}

class Notification {
    ID: UUID {primary key}
    process_ID: UUID {foreign key -> Process.ID}
    recipient_ID: UUID {foreign key -> User.ID} NOT NULL
    content: text NOT NULL
    is_read: boolean DEFAULT false
    created_at: timestamp DEFAULT CURRENT_TIMESTAMP
}

class Chat {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID} NOT NULL
    lawyer_ID: UUID {foreign key -> Lawyer.ID} NOT NULL
    UNIQUE (client_ID, lawyer_ID)
}

class Message {
    ID: UUID {primary key}
    chat_ID: UUID {foreign key -> Chat.ID} NOT NULL
    sender_ID: UUID {foreign key -> User.ID} NOT NULL
    content: text NOT NULL
    sent_at: timestamp DEFAULT CURRENT_TIMESTAMP
}

class Appointment {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID} NOT NULL
    lawyer_ID: UUID {foreign key -> Lawyer.ID} NOT NULL
    process_ID: UUID {foreign key -> Process.ID}
    appointment_time: timestamp NOT NULL
    UNIQUE (lawyer_ID, appointment_time)
    UNIQUE (client_ID, appointment_time)
}

class Appointment_Notes {
    ID: UUID {primary key}
    appointment_ID: UUID {foreign key -> Appointment.ID} NOT NULL
    author_ID: UUID {foreign key -> User.ID} NOT NULL
    note: text NOT NULL
    created_at: timestamp DEFAULT CURRENT_TIMESTAMP
}

' ===========================
' Logging Tables (With Old/New Values)
' ===========================

class Client_Log {
    ID: UUID {primary key}
    client_ID: UUID {foreign key -> Client.ID} NOT NULL
    operation: ENUM {CREATE UPDATE DELETE ACTIVATE INACTIVATE} NOT NULL
    performed_by: UUID {foreign key -> User.ID} NOT NULL
    updated_at: timestamp DEFAULT CURRENT_TIMESTAMP
    old_value: JSON NOT NULL
    new_value: JSON NOT NULL
}

class Lawyer_Log {
    ID: UUID {primary key}
    lawyer_ID: UUID {foreign key -> Lawyer.ID} NOT NULL
    operation: ENUM {CREATE UPDATE DELETE ACTIVATE INACTIVATE} NOT NULL
    performed_by: UUID {foreign key -> User.ID} NOT NULL
    updated_at: timestamp DEFAULT CURRENT_TIMESTAMP
    old_value: JSON NOT NULL
    new_value: JSON NOT NULL
}

class Admin_Log {
    ID: UUID {primary key}
    admin_ID: UUID {foreign key -> Admin.ID} NOT NULL
    operation: ENUM {CREATE UPDATE DELETE} NOT NULL
    performed_by: UUID {foreign key -> User.ID} NOT NULL
    updated_at: timestamp DEFAULT CURRENT_TIMESTAMP
    old_value: JSON NOT NULL
    new_value: JSON NOT NULL
}

class Process_Log {
    ID: UUID {primary key}
    process_ID: UUID {foreign key -> Process.ID} NOT NULL
    operation: ENUM {CREATE UPDATE CLOSE REOPEN DELETE} NOT NULL
    performed_by: UUID {foreign key -> User.ID} NOT NULL
    updated_at: timestamp DEFAULT CURRENT_TIMESTAMP
    old_value: JSON NOT NULL
    new_value: JSON NOT NULL
}

' ===========================
' Relationships
' ===========================

' Inheritance Links (User to Roles)
User "1" -- "0..1" Client : is a
User "1" -- "0..1" Lawyer : is a
User "1" -- "0..1" Admin : is a

' Notifications
User "1" -- "0..*" Notification : receives
Process "1" -- "0..*" Notification : sends

' Process and Documents
Process "1" -- "0..*" Documents : contains

' Core Workflow
Client "1" -- "0..*" Process : manages
Lawyer "1" -- "0..*" Process : handles

' Chat and Messages
Chat "1" *-- "0..*" Message : contains

' Client, Lawyer, and Chat
Client "1" -- "0..*" Chat : owns
Lawyer "1" -- "0..*" Chat : owns

' Appointments
Client "1" -- "0..*" Appointment : has
Lawyer "1" -- "0..*" Appointment : has
Process "0..1" -- "0..*" Appointment : is related to
Appointment "1" *-- "0..*" Appointment_Notes : notes

' Logs
Client "1" -- "0..*" Client_Log : activity
Lawyer "1" -- "0..*" Lawyer_Log : activity
Admin "1" -- "0..*" Admin_Log : activity
Process "1" -- "0..*" Process_Log : changes

@enduml